@@ -27,6 +27,9 @@ extern MagickExport MagickBooleanType
   AutoGammaImageChannel(Image *,const ChannelType),
   AutoLevelImage(Image *),
   AutoLevelImageChannel(Image *,const ChannelType),
+  BrightnessContrastImage(Image *,const double,const double),
+  BrightnessContrastImageChannel(Image *,const ChannelType,const double,
+    const double),
   ClutImage(Image *,const Image *),
   ClutImageChannel(Image *,const ChannelType,const Image *),
   ColorDecisionListImage(Image *,const char *),
