@@ -96,6 +96,9 @@ extern WandExport MagickBooleanType
     const double),
   MagickBorderImage(MagickWand *,const PixelWand *,const unsigned long,
     const unsigned long),
+  MagickBrightnessContrastImage(MagickWand *,const double,const double),
+  MagickBrightnessContrastImageChannel(MagickWand *,const ChannelType,
+    const double,const double),
   MagickCharcoalImage(MagickWand *,const double,const double),
   MagickChopImage(MagickWand *,const unsigned long,const unsigned long,
     const long,const long),
