@@ -7,6 +7,7 @@
   * Support heterogeneous distributed processing, see
     http://www.imagemagick.org/script/architecture.php#distributed.
   * Fix semaphore assertion when reading a corrupt image with Magick++.
+  * Add support for -brightness-contrast option.
 
 2010-01-05  6.5.9-0 Stephan Menzel  <stephan.menzel@gmail...>
   * Add support for the BGRA raw image format.
